ISPN-10133 Update Windows scripts
* Fixes startup with JDK 11